--- a/app/globals.css
+++ b/app/globals.css
@@ -85,23 +85,9 @@ body {
 /* Fond bois clair réutilisable (version d'origine) */
 .wood-bg {
   background-image: url('/images/bois claire.jpg');
-  /* Motif répétitif pour éviter l'effet zoom/flou sur grands écrans */
-  background-repeat: repeat;
-  background-position: top left;
-  /* Taille de motif par défaut (mobile) */
-  background-size: 300px auto;
-}
-
-@media (min-width: 640px) {
-  .wood-bg {
-    background-size: 360px auto;
-  }
-}
-
-@media (min-width: 1024px) {
-  .wood-bg {
-    background-size: 420px auto;
-  }
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Effet LED (néon) plus blanc (moins jaune) pour titres */
